# xsdnn

./: .gitignore  .gitmodules  CMakeLists.txt  MNISTConfig.cmake  README.md  build.py  build.sh  install.sh  logic.drawio  main.cpp  readme.md  xsDNN.h  xsDNN.hpp  xsdnn.h  xsdnn_infrastructure
.github/workflows/: cmake.yml
Doxygen/: Doxyfile  UserManual.h
Doxygen/footer_header_etc/: DoxygenLayout.xml
Doxygen/html/: DoxygenLayout.xml  _binary_class_entropy_8h.html  _binary_class_entropy_8h__incl.map  _binary_class_entropy_8h__incl.md5  _binary_class_entropy_8h_source.html  _callback_8h_source.html  _classification_callback_8h.html  _classification_callback_8h__incl.map  _classification_callback_8h__incl.md5  _classification_callback_8h_source.html  _config_8h_source.html  _d_n_n_8h_source.html  _data_loader_8h.html  _data_loader_8h__incl.map  _data_loader_8h__incl.md5  _data_loader_8h_source.html  _enum_8h.html  _enum_8h__dep__incl.map  _enum_8h__dep__incl.md5  _enum_8h__incl.map  _enum_8h__incl.md5  _enum_8h_source.html  _fully_connected_8h.html  _fully_connected_8h__incl.map  _fully_connected_8h__incl.md5  _fully_connected_8h_source.html  _identity_8h.html  _identity_8h__incl.map  _identity_8h__incl.md5  _identity_8h_source.html  _in_out_8h.html  _in_out_8h__incl.map  _in_out_8h__incl.md5  _in_out_8h_source.html  _layer_8h_source.html  _metrics_8h.html  _metrics_8h__incl.map  _metrics_8h__incl.md5  _metrics_8h_source.html  _multi_class_entropy_8h.html  (+217 more)
Doxygen/latex/: _binary_class_entropy_8h.tex  _binary_class_entropy_8h__incl.md5  _classification_callback_8h.tex  _classification_callback_8h__incl.md5  _data_loader_8h.tex  _data_loader_8h__incl.md5  _enum_8h.tex  _enum_8h__dep__incl.md5  _enum_8h__incl.md5  _fully_connected_8h.tex  _fully_connected_8h__incl.md5  _identity_8h.tex  _identity_8h__incl.md5  _in_out_8h.tex  _in_out_8h__incl.md5  _metrics_8h.tex  _metrics_8h__incl.md5  _multi_class_entropy_8h.tex  _r_e_a_d_m_e_8md.tex  _random_8h.tex  _random_8h__dep__incl.md5  _random_8h__incl.md5  _re_l_u_8h.tex  _re_l_u_8h__incl.md5  _regression_m_s_e_8h.tex  _regression_m_s_e_8h__incl.md5  _regressor_callback_8h.tex  _regressor_callback_8h__incl.md5  _s_g_d_8h.tex  _s_g_d_8h__incl.md5  _sigmoid_8h.tex  _sigmoid_8h__incl.md5  _softmax_8h.tex  _softmax_8h__incl.md5  _verbose_callback_8h.tex  _verbose_callback_8h__incl.md5  annotated.tex  class_binary_class_entropy.tex  class_binary_class_entropy__coll__graph.md5  class_callback.tex  (+55 more)
cmake/: CMakeLists.txt  DownloadGoogleProtobuf.cmake  DownloadGoogleTest.cmake  DownloadProfiler.cmake  DownloadXNNPACK.cmake  summary.cmake  xsdnn_activations.cmake  xsdnn_common.cmake  xsdnn_converter.cmake  xsdnn_core.cmake  xsdnn_framework.cmake  xsdnn_layers.cmake  xsdnn_loss.cmake  xsdnn_mmpack.cmake  xsdnn_optimizers.cmake  xsdnn_serializer.cmake  xsdnn_session.cmake  xsdnn_unittest.cmake  xsdnn_utils.cmake
doc/: cmake-build.md  inference-example.md  version.md
doc/op/: readme.md
example/: CMakeLists.txt
example/approximate_sin/: main.cpp
example/mnist/: test.cpp  train.cpp
include/: xsdnn.h
include/common/: network.h  node.h  nodes.h
include/converter/: onnx_common.h  onnx_loader.h
include/core/: backend.h
include/framework/: threading.h  threadpool.h
include/layers/: abs.h  acos.h  add.h  and.h  batch_normalization.h  convolution.h  flatten.h  fully_connected.h  global_average_pooling.h  implicit_reshape.h  input.h  layer.h  layers.h  max_pooling.h  mul.h  output.h  reshape.h
include/loss/: loss_base.h  mse_loss.h
include/mmpack/: config.h  dot.h  mmpack.h  v2mm.h  wrappers.h
include/optimizers/: optimizer_base.h  sgd.h
include/serializer/: cerial.h  xs.proto3
include/session/: inference_environment.h  inference_options.h  inference_session.h
include/utils/: broadcaster.h  grad_checker.h  graph.h  macro.h  random.h  rng.h  tensor.h  tensor_shape.h  tensor_utils.h  transpose.h  util.h  weight_init.h  xs_error.h  xs_visualizer.h
internal-test/: batchnorm1d_test.cpp  bernoulli_test.cpp  classification-metrics-test.cpp  distributing-generate-test.cpp  net-output-test.cpp  save_load_net_test.cpp  test_sinus_fit.cpp
legacy/: xsDNN.hpp
legacy/example_old/: CMakeLists.txt
legacy/src/: node.hpp
legacy/test/: matmul_op_test.cpp  readme.md
legacy/test/test/: CMakeLists.txt  edge_node_test.cpp  serialization_helper_test.cpp
legacy/test_old/: batch_norm_test.h  core_conv_test.h  nn.h  tensor_types_test.h  test.cpp
legacy/xsDNN_old/: NeuralNetwork.h  xsDNN.h
neuralnetwork/: Callback.h  Config.h  DNN.h  Layer.h  NeuralNetwork.h  Optimizer.h  Output.h  RNG.h  xsDNN.h
neuralnetwork/Activation/: Identity.h  LeakyReLU.h  ReLU.h  Sigmoid.h  Softmax.h
neuralnetwork/Callback/: ClassificationCallback.h  MyVerboseCallback1.h  RegressionCallback1.h  RegressorCallback.h  VerboseCallback.h
neuralnetwork/Distribution/: Exponential.h  Normal.h  Uniform.h
neuralnetwork/Layer/: BatchNormalization.h  Dropout.h  (+1 more)
old/: CMakeLists_old.txt  README_old.md  install_old.sh
src/: config.h  config.hpp  network.h  network.hpp  node.cc  node.h  node.hpp  nodes.cc  nodes.h  nodes.hpp  readme.md
test/: CMakeLists.txt  MNIST_example.cpp  activation_test.h  batch_norm_test.h  batchnorm1d_test.cpp  bernoulli_test.cpp  classification-metrics-test.cpp  colored_print_visual_test.cpp  colored_print_visual_test.hpp  core_conv_test.h  determenistic_rng_test.cpp  distributing-generate-test.cpp  dropout_layer_test.cpp  dropout_test.h  edge_node_test.hpp  fully_connected_test.h  helper.h  matmul_op_test.cpp  net-output-test.cpp  new_layer_test.cpp  nn.h  progress_bar_test.cpp  save_load_net_test.cpp  serialization_helper_test.cpp  serialization_helper_test.hpp  some_stupid_test.h  some_test.cpp  tensor_types_test.h  test.cpp  test_abs.cc  test_acos.cc  test_add.cc  test_and.cc  test_batch_norm.cc  test_broadcast.cc  test_conv.cc  test_dot.cc  test_flatten.cc  test_fully_connected.cc  test_global_average_pooling.cc  (+19 more)
xsDNN/: Config.h  Layer.h  NeuralNetwork.h  Optimizer.h  Output.h  RNG.h  xsDNN.h
xsDNN-models/: readme.md
(+383 files in other folders)
